--- a/hubpress/config.json
+++ b/hubpress/config.json
@@ -1,6 +1,6 @@
 {
   "meta": {
-    "username": "innovisite",
+    "username": "Innovisite",
     "repositoryName": "innovisite.gitug.io",
     "branch": "master"
   },
