--- a/hubpress/config.json
+++ b/hubpress/config.json
@@ -1,7 +1,7 @@
 {
   "meta": {
-    "username": "Innovisite",
-    "repositoryName": "innovisite.gitug.io",
+    "username": "innovisite",
+    "repositoryName": "innovisite.github.io",
     "branch": "master"
   },
   "theme": {
